# tictactoe

./: .gitignore  CMakeLists.txt  README.md  generate_sln.bat
app/: CMakeLists.txt
app/source/: AglorithmMatrix.cpp  AlgorithmMatrix.h  App.cpp  App.h  Configuration.cpp  Configuration.h  IDrawable.h  MatchWidget.cpp  MatchWidget.h  MatchWindow.cpp  MatchWindow.h  MiniMax.cpp  MiniMax.h  PlayerErick.cpp  PlayerErick.h  PlayerExe.cpp  PlayerExe.h  PlayerListing.cpp  PlayerListing.h  PlayerManual.cpp  PlayerManual.h  ScheduleWindow.cpp  ScheduleWindow.h  StandingsWindow.cpp  StandingsWindow.h  main.cpp
lib/imgui/: CMakeLists.txt
lib/imgui/examples/example_win32_directx12/: main.cpp
logic/: CMakeLists.txt
logic/include/: Board.h  Competition.h  CompetitionRunner.h  Constants.h  Coordinates.h  DummyBoard.h  EnumPlayerFranLVals.h  Fixture.h  IPlayer.h  IScheduleBuilder.h  IntMatrix.h  Match.h  MatchPlayer.h  PlayerErick.h  PlayerExample.h  PlayerExe.h  PlayerFede.h  PlayerFranL.h  Schedule.h  ScheduleBuilderRoundRobin.h  Standing.h  Tile.h
logic/source/: Board.cpp  Competition.cpp  CompetitionRunner.cpp  DummyBoard.cpp  Fixture.cpp  IntMatrix.cpp  Match.cpp  MatchPlayer.cpp  PlayerErick.cpp  PlayerExample.cpp  PlayerExe.cpp  PlayerFede.cpp  PlayerFranL.cpp  Schedule.cpp  ScheduleBuilderRoundRobin.cpp  Standing.cpp  Tile.cpp
window/: CMakeLists.txt
window/include/: DirectX.h  ImGuiWindow.h  Window.h  WindowClass.h  WindowGeometry.h  release_deleter.h
window/source/: DirectX.cpp  ImGuiWindow.cpp  Window.cpp  WindowClass.cpp
